--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -23,7 +23,7 @@
         </div>
       </div>
        <mat-dialog-actions class="action">
-         <button (click)="changeAnimation()" type="submit" mat-fab extended color="primary" [mat-dialog-close]="false">
+         <button (click)="changeAnimation()" type="submit" mat-fab extended color="primary">
            <mat-icon class="material-symbols-outlined" aria-hidden="false" aria-label="login icon">login</mat-icon>
            Iniciar sesión
          </button>
