--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -34,7 +34,7 @@
             <li class="nav-item"><a class="nav-link active" aria-current="page" href="#sobre-mi">About me</a></li>
             <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
             <li class="nav-item"><a class="nav-link" href="#formacion">Training</a></li>
-            <li class="nav-item"><a class="nav-link" href="#xp">Proyects</a></li>
+            <li class="nav-item"><a class="nav-link" href="" routerLink="/proyects">Proyects</a></li>
             <li class="nav-item"><a class="nav-link" href="#contacto">Contact</a></li>
             <li class="nav-item-btn">
               <button 
