--- a/src/app/componentes/btn-goup/btn-goup.component.css
+++ b/src/app/componentes/btn-goup/btn-goup.component.css
@@ -1,14 +1,26 @@
-.button-goup{
-    position: fixed;
-    bottom: 50px;
-    right: 50px;
-    border-radius: 50%;
-    transition: all 300ms ease;
-    transform: scale(0);
-    z-index: 1;
+.button-goup {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  border-radius: 50%;
+  transition: all 300ms ease;
+  transform: scale(0);
+  z-index: 1;
 }
 
-.button-goup:hover{
-    transform: scale(4);
-    border-color: rgba(0,0,0,0.1);
+.button-goup:hover {
+  transform: scale(4);
+  border-color: rgba(0, 0, 0, 0.1);
+}
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(74, 74, 74, .8);
+  backdrop-filter: blur(5px);
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
