--- a/src/app/componentes/education/education.component.css
+++ b/src/app/componentes/education/education.component.css
@@ -1,10 +1,5 @@
 /** Formacion Académica*/
 .academic{
-    background: var(--cor-de-cards);
-    color: var(--cor-de-letra);
-}
-
-.academic__content{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -12,6 +7,8 @@
     margin: auto;
     gap: 2rem;
     padding: 1rem 0;
+    background: var(--cor-de-cards);
+    color: var(--cor-de-letra);
 }
 
 .academic__title{
@@ -51,11 +48,6 @@
         width: 90%;
         padding: 2rem 0;
     }
-   
-
-    .academic__courses__box{
-        height: 165px;
-    }
 
     .academic__courses__list{
         gap: 0.3rem;
@@ -71,12 +63,12 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        gap: 0;
     }
 
     .academic__courses__box{
         margin: 1rem 0;
-        width: 80%;
-        height: 200px;
+        width: 100%;
     }
 
     .academic__courses__item__img{
