--- a/src/app/componentes/login/login.component.css
+++ b/src/app/componentes/login/login.component.css
@@ -49,3 +49,13 @@ button{
 .title{
   text-align: center;
 }
+
+@media screen and (max-width: 576px) {
+  .div{
+    width: 280px;
+    height: 280px;
+  }
+  h1{
+    margin: 0;
+  }
+}
