--- a/src/app/componentes/projects/projects.component.scss
+++ b/src/app/componentes/projects/projects.component.scss
@@ -3,57 +3,79 @@
 .experience{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    gap: 1rem;
     width: 70%;
     margin: auto;
     padding: 1rem 0;
 }
 
- .slide{
+.experience__title{
+  text-align: center;
+}
+
+.proyects{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 2rem;
   width: 100%;
- }
+}
+
+//  .slide{
+//   width: 100%;
+//  }
  
-.experience__box{
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    width: 100%;
-}
+// .experience__box{
+//     display: flex;
+//     align-items: center;
+//     gap: 1rem;
+//     width: 100%;
+// }
 
-.experience__img{
+// .experience__img{
     
-    height: 500px;
-    width: 750px;
-}
+//     height: 500px;
+//     width: 750px;
+// }
 
-.experience__info{
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    width: 100%;
-}
+// .experience__info{
+//     display: flex;
+//     flex-direction: column;
+//     gap: 0.5rem;
+//     width: 100%;
+// }
 
-.experience__boton--repo, .experience__boton--demo, a>button{
-    padding: 0.5rem 1rem;
-    text-align: center;
-    cursor: pointer;
-    outline: none;
-    color: #fff;
-    background-color: var(--cor-de-letra);
-    border: none;
-    border-radius: 15px;
+// .experience__boton--repo, .experience__boton--demo, a>button{
+//     padding: 0.5rem 1rem;
+//     text-align: center;
+//     cursor: pointer;
+//     outline: none;
+//     color: #fff;
+//     background-color: var(--cor-de-letra);
+//     border: none;
+//     border-radius: 15px;
+//   }
+
+//   // a {
+//   //   color: #fff;
+//   // }
+
+//   .experience__description{
+//     display: flex;
+//     justify-content: center;
+//     gap: 1rem;
+//     margin-top: 1rem;
+//     width: 100%;
+//   }
+
+  .example-card {
+    max-width: 400px;
   }
 
-  // a {
-  //   color: #fff;
-  // }
-
-  .experience__description{
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    margin-top: 1rem;
-    width: 100%;
+  @media screen and (max-width: 1250px) {
+    .proyects{
+      justify-content: center;
+    }
   }
 
   @media screen and (max-width: 768px) {
