--- a/src/app/componentes/skills/edit-skill.component.html
+++ b/src/app/componentes/skills/edit-skill.component.html
@@ -24,7 +24,7 @@
 
     <div>
       <label for="image">Seleccione una imagen</label>
-      <input type="file" class="form-control" id="imagen" name="imagen" [(ngModel)]="urlImage" (change)="uploadImage($event)" accept=".jpg, .png">
+      <input type="file" class="form-control" id="imagen" name="imagen" [(ngModel)]="urlImage" [ngModelOptions]="{standalone: true}" (change)="uploadImage($event)" accept=".jpg, .png">
     </div>
 
     <mat-dialog-actions class="action">
