--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,10 @@ ol, ul,li {
     list-style: none;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 button{
     padding: 0.5rem 1rem;
     font-size: 1rem;
@@ -75,15 +79,4 @@ img {
 .example-button-row {
   display: flex;
   justify-content: flex-end;
-}
-
-.overlay {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(74, 74, 74, .8);
-  z-index: 10;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
